tests/paczka1/fuzzy1/49422977.err
Error in line 5: A400 A149 94,7
Error in line 2: SxNQfh A400 79,9
Error in line 22: g0e0VoR1 A149 72,5
Error in line 20: A400 S54 86,4
Error in line 27: tweefF S54 21,5
Error in line 32: tweefF S868 61,2
Error in line 37: zfQU5sDzcan A[49 89,8
